[package]
name = "nes-emulator"
version = "0.1.0"
authors = ["Mikko Kaistinen <mikko.kaistinen@kapsi.fi>"]
edition = "2018"

[dependencies]
bitfield = "0.14.0"
crossterm = "0.26.1"
getopts = "0.2.21"
gilrs = "0.10.2"
glutin = { version = "0.32.1", default-features = false }
glutin-winit = "0.5.0"
glium = "0.36.0"
obj = "0.10.2"
ouroboros = "0.18.4"
rodio = "0.17.1"
winit = "0.30.5"

[dependencies.image]
version = "0.25.4"
default-features = false

[profile.release]
debug = true
