[package]
name = "nes-emulator"
version = "0.1.0"
authors = ["Mikko Kaistinen <mikko.kaistinen@kapsi.fi>"]
edition = "2018"

[dependencies]
bitfield = "0.14.0"
crossterm = "0.26.1"
getopts = "0.2.21"
gilrs = "0.10.2"
glutin = { version = "0.30.10", default-features = false }
glutin-winit = "0.3.0"
glium = "0.33.0"
obj = "0.10.2"
rodio = "0.17.1"
winit = "0.28.7"

[dependencies.image]
version = "0.25.4"
default-features = false

[profile.release]
debug = true
