[package]
name = "nes-emulator"
version = "0.1.1"
authors = ["Mikko Kaistinen <mikko.kaistinen@kapsi.fi>"]
edition = "2018"

[dependencies]
bitfield = "0.17.0"
crossterm = "0.28.1"
getopts = "0.2.21"
gilrs = "0.11.0"
glutin = { version = "0.30.10", default-features = false }
glutin-winit = "0.3.0"
glium = "0.33.0"
obj = "0.10.2"
rodio = "0.19.0"
winit = "0.28.7"

[dependencies.image]
version = "0.25.4"
default-features = false

[profile.release]
debug = true
